fixed horizontal glitch on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ button {
 
 header {
   height: 100vh;
+  width: 100%;
 }
 header .header-text {
   background-color: #611818;
