--- a/sass/components/head-page/_header.scss
+++ b/sass/components/head-page/_header.scss
@@ -1,5 +1,7 @@
 header {
   height: 100vh;
+  // width: 100vh;
+  width: 100%;
 
   .header-text {
     background-color: $themeClrPrimary;
